Add Meta domain verification tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="mch7g0zjaqtd4oyc1o4x9zkzcd6uz6" />
     <title>Kinlet — Family Adventures, Simplified</title>
     <meta name="description" content="Kinlet helps families discover kid-friendly places, activities, and hidden gems nearby. Less planning, more exploring.">
     <link rel="icon" type="image/png" href="logo.png">
